--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,17 @@
-# Database Configuration
+# Application Configuration
+server.port=${PORT:8080}
+spring.application.name=alan-kalbermatter-portfolio
+
+# CORS Configuration - Updated for production
+spring.web.cors.allowed-origins=http://localhost:3000,http://localhost:4200,http://localhost:8080,https://*.railway.app,https://*.vercel.app,https://*.netlify.app
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+
+# Default profile (development with H2)
+spring.profiles.active=dev
+
+# Development Profile (H2 Database)
+spring.config.activate.on-profile=dev
 spring.datasource.url=jdbc:h2:mem:portfolio
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -6,12 +19,27 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
-# Application Configuration
-server.port=8081
-spring.application.name=alan-kalbermatter-portfolio
+---
+# Docker Profile (PostgreSQL Database)
+spring.config.activate.on-profile=docker
+spring.datasource.url=jdbc:postgresql://postgres:5432/portfolio_db
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=portfolio_user
+spring.datasource.password=portfolio_password
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
 
-# CORS Configuration
-spring.web.cors.allowed-origins=http://localhost:3000,http://localhost:4200
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.web.cors.allowed-headers=*
+
+# Railway Production Profile (PostgreSQL Database)
+spring.config.activate.on-profile=railway
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+logging.level.org.hibernate.SQL=ERROR
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=ERROR
