--- a/.gitignore
+++ b/.gitignore
@@ -38,9 +38,13 @@ build/
 ### Docker ###
 .dockerignore
 docker-compose.override.yml
+
+### Environment Variables - NEVER COMMIT THESE ###
 .env
 .env.local
 .env.*.local
+.env.production
+.env.staging
 
 ### Database ###
 *.db
@@ -50,5 +54,9 @@ pgdata/
 postgres_data/
 
 ### Logs ###
-*.log
 logs/
+*.log
+
+### OS ###
+.DS_Store
+Thumbs.db
