--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@
 server.port=${PORT:8080}
 spring.application.name=alan-kalbermatter-portfolio
 
-# CORS Configuration - Updated for production
-spring.web.cors.allowed-origins=http://localhost:3000,http://localhost:4200,http://localhost:8080,https://*.railway.app,https://*.vercel.app,https://*.netlify.app
+# CORS Configuration - Parameterized for security
+spring.web.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:4200,http://localhost:8080}
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 
-# Default profile (development with H2)
-spring.profiles.active=dev
+# Default profile
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 
 # Development Profile (H2 Database)
 spring.config.activate.on-profile=dev
@@ -22,24 +22,42 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 ---
-# Docker Profile (PostgreSQL Database)
+# Docker Profile (PostgreSQL Database) - Parameterized
 spring.config.activate.on-profile=docker
-spring.datasource.url=jdbc:postgresql://postgres:5432/portfolio_db
+spring.datasource.url=jdbc:postgresql://${DB_HOST:postgres}:${DB_PORT:5432}/${DB_NAME:portfolio_db}
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=portfolio_user
-spring.datasource.password=portfolio_password
+spring.datasource.username=${DB_USERNAME:portfolio_user}
+spring.datasource.password=${DB_PASSWORD:portfolio_password}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
-
+---
 # Railway Production Profile (PostgreSQL Database)
 spring.config.activate.on-profile=railway
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=${DDL_AUTO:update}
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
-logging.level.org.hibernate.SQL=ERROR
+
+# Security and Performance
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
+
+# Logging Configuration
+logging.level.org.hibernate.SQL=${SQL_LOG_LEVEL:ERROR}
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=ERROR
+logging.level.com.akalber.alankalbermatter=${APP_LOG_LEVEL:INFO}
+logging.level.org.springframework.security=${SECURITY_LOG_LEVEL:WARN}
+
+# Actuator Configuration for Railway Health Checks
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=when-authorized
+management.endpoint.health.show-components=always
+management.health.db.enabled=true
