--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
