--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -83,10 +83,8 @@ spring:
     activate:
       on-profile: railway
   datasource:
-    url: ${DATABASE_URL}
+    url: ${JDBC_DATABASE_URL:${DATABASE_URL}}
     driverClassName: org.postgresql.Driver
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
