fix health check issue

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: "*"
+        include: "health,info"
   endpoint:
     health:
       show-details: always
@@ -24,6 +24,15 @@ management:
       enabled: true
     db:
       enabled: true
+  metrics:
+    enable:
+      system: false
+      process: false
+      jvm: true
+  simple:
+    metrics:
+      export:
+        enabled: true
 
 # CORS Configuration - Parameterized for security
 spring.web.cors:
